Demon Guide: Updated Huang Long, Rama

--- a/index.html
+++ b/index.html
@@ -1217,7 +1217,7 @@
                               <td><b>Salvation</b> is not that good on him as he is not a caster (and it's too costly). It's unlikely he'd ever use it in auto.
                                   <br><b>Null Phys</b> is what makes this pulled archetype good (and is the only source of a
                                   Null resistance that is transferable). If his attack is repelled he won't die to the
-                                  reflected damage and so you can sweep teams irregardless of Alilat + repel phys.</td>
+                                  reflected damage and so you can sweep teams irregardless of Alilat + repel phys. I'd recommend shifting this to another archetype if you can.</td>
                               <td>Bad</td>
                           </tr>
                           <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
@@ -1249,95 +1249,100 @@
                 <!-- [Huang Long] -->
                 <b-card>
                     <p><strong><a id="HuangLong" href="javascript:void(0)" @click="show_guide_devil('Huang Long')">Huang Long</a></strong></p>
-                    <p>One of the best support demons in the game (I want him &gt;-&lt;). His main use is for Five
-                        Elements which is a improved version of Makarakarn, reflecting all spells including
-                        Almighty ones. Only pierce skills/phys attacks can be used. Regardless of the archetype, i
-                        would recommend getting him as 5 Elements will make content much easier.</p>
-                        <div id="DemonGuideTable">
-                                <p><table>
-                                  <tbody>
-                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                                        <td>TO DO: <b>Life Aid</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                                        <td>TO DO: <b>Energy Drain</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                                        <td><b>Luster Candy</b> allows him to buff your party to boost all
-                                            stats, what's not to love about that?</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                                        <td><b>Speedster</b> with his
-                                            naturally high speed would allow your team to reach really high battle speed numbers, ensuring
-                                            you act first.</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                                        <td><b>Null Dark</b> means he
-                                            resists all elements and be immune to Light and Dark.</td>
-                                        <td></td>
-                                    </tr>
-                                  </tbody>
-                                </table></p>
-                              </div>
+                    <p>Arguably the best support demon in the game with resistance to all elements (minus dark, phys), Null Light + high stats (minus strength). His main use is Five Elements (5E) which 
+                       is an improved version of Makarakarn, reflecting all spells including Almighty meaning only pierce skills/phys attacks can be used. Regardless of the archetype, i would 
+                       recommend getting him as 5 Elements will make any content way easier. 5 Elements can be countered via Makara Break or Silent Prayer to remove it.
+                    </p>
+                    <div id="DemonGuideTable">
+                      <p><table>
+                        <tbody>
+                          <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                              <td><b>Life Aid</b> doesn't help him that much. Given his innate survivability you wouldn't really expect this to do much.</td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                              <td><b>Energy Drain</b> gives him a single target attack. He's meant to be used for spamming 5E so this may throw a wrench in his 
+                                  ability to continuously spam it (given it has the same mp cost due to being an awakening skill). The most effective way to build him is for 
+                                  support not damage.
+                              </td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                              <td><b>Luster Candy</b> allows him to buff your party to boost all stats, what's not to love about that?. This cause small issues in autoing 
+                              as he'd likely use  this over 5 elements, but in manual play is really amazing, extending his support kit to buffs as well.</td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                              <td><b>Speedster</b> with his naturally high speed, this would allow your team to reach really high battle speed numbers, ensuring you act first.
+                                  In pve content its always a good idea for your team to go first and so he helps in this regard greatly. Speedster can be transfered 
+                                  however so you can go with another archetype if you wish (you'd save a fair amount of mag when going with this one, unless you're lucky enough 
+                                  to pull Speedster).
+                              </td>
+                              <td>Best</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                              <td><b>Null Dark</b> means he resists all elements and would be immune to Light and Dark. He can then block Alice, White Rider from one 
+                              shotting him and naturally would also prevent Ixtab's instant kill (due to 5E).</td>
+                              <td>Usable</td>
+                          </tr>
+                        </tbody>
+                      </table></p>
+                    </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Endure. For pvp and survival</li>
                         <li>Samarecarm. Gives you more support utility</li>
                         <li>Barrier Break. Combine this with a Speedster HL for turn one ailment teams. On his
-                            subsequent turns you can then spam 5E for survival.</li>
-                        <li>Speedster. If not purple and you'd like the skill anyways its still a valid choice on
+                            subsequent turns he'd then spam 5E for survival.</li>
+                        <li>Speedster. If not Purple and you'd like the skill anyways its still a valid choice on
                             him. A fair investment though as it is 10 skill points and requires you to fuse Kama
                             (or if you're lucky have a Teal pulled Rakshasha).</li>
-                        <li>Resist Phys/Null Phys. If you're going for the Teal Route (which is what i want to do),
-                            this further bolsters him.</li>
-                        <li>Dodge/Evade. You can also go for a evasion type build with him if you want. 5 Elements
-                            to ignore magic and evasion to avoid physical.</li>
+                        <li>Null Phys. If you're going for the Teal Route, this can further bolster him for pve content and be a surprise for pvp.</li>
+                        <li>Dodge/Evade. You should build him for evasion, this just further enhances it. 5E to ignore magic and evasion to avoid physical.</li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine type, you'd want to always have 5E up.</p>
+                    <p><strong>Brands:</strong> Divine, you'd want to always have 5E up.</p>
                 </b-card>
                 <!-- [Rama] -->
                 <b-card>
                     <p><strong><a id="Rama" href="javascript:void(0)" @click="show_guide_devil('Rama')">Rama</a></strong></p>
-                    <p>Another OP pvp demon with no weaknesses (Immune to fire, resistant to ice). Rama comes with
-                        2 unique skills + Mabufudyne: Drain Pierce (Pierce has no effect on demons with Drain
-                        resistances, provided he's alive) and Brahmastra (Almighty hit all 3 times). He's the drain
-                        version of Alilat's effect and with Brahmastra is effective against demons that have
-                        endure/enduring soul.</p>
-                        <div id="DemonGuideTable">
-                                <p><table>
-                                  <tbody>
-                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                                        <td>TO DO: <b></b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                                        <td><b>Energy Drain</b> is rather lackluster. <br><b>Mana Aid</b> makes him really
-                                            good in pve, essentially you'd wipe out waves with Brahmastra, regain your mana, rinse
-                                            and repeat. This would make him a really good demon to use in autoing provided he hits
-                                            hard enough.</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                                        <td><b>Luster Candy</b> would give you another source of buff all (Though that's better suited to
-                                            Amaterasu/Huang Long).<br><b>Concentrate</b> would allow you to use him in Jack Bros setups.</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                                        <td>TO DO: Though you'd want to spam Brahmastra, <b>Ice Pierce</b> would laugh in the face of 5 elements
-                                            and you wouldn't have to bring Makara Break in those cases.<br><b>Ice Age</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                                        <td>TO DO: <b>Drain Ice</b><br><b>Null Mute</b></td>
-                                        <td></td>
-                                    </tr>
-                                  </tbody>
-                                </table></p>
-                              </div>
+                    <p>OP demon with no weaknesses (Immune to fire, resistant to ice). Rama comes with Mabufudyne and 2 unique skills: Drain Pierce (Pierce has no 
+                        effect on demons with Drain resistances, provided he's alive) and Brahmastra (Almighty hit all 3 times). He's the drain version of Alilat's effect 
+                        and with Brahmastra, is effective against demons that have avatar/endure/enduring soul.
+                    </p>
+                    <div id="DemonGuideTable">
+                      <p><table>
+                        <tbody>
+                          <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                              <td>He's a magic attacker so <b>Hades Blast</b> has no use to him at all</td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                              <td><b>Energy Drain</b> is rather lackluster as you'd prefer using Brahmastra instead. 
+                                <br><b>Mana Aid</b> makes him really good in pve, essentially you'd wipe out waves with Brahmastra, regain your mana, rinse
+                                  and repeat. This would make him a really good demon to use in autoing provided he hits hard enough.
+                              </td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                              <td><b>Luster Candy</b> would give you another source of a full buff (Though that's better suited to Amaterasu/Huang Long), 
+                                  he won't use it on auto due to being Attack AI.
+                                  <br><b>Concentrate</b> would allow you to use him in Jack Bros setups, charging up to deal high amounts of damage.
+                              </td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                              <td>Though you'd want to spam Brahmastra, <b>Ice Pierce</b> would go through 5 elements saving you from bringing Makara Break/Silent Prayer. 
+                                  <br><b>Ice Age</b> could help for single targeting</td>
+                              <td><b>Best (Offensive)</b></td>
+                          </tr>
+                          <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                              <td><b>Drain Ice</b> is an effective counter to other Purple Ramas and can be useful against Makarakarn/5 Elements, Reflect a Mabufudyne off the shield to heal.
+                                <br><b>Null Mute</b> is not that great on him, so it can be replaced.</td>
+                              <td>Usable</td>
+                          </tr>
+                        </tbody>
+                      </table></p>
+                    </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Endure/Enduring soul. As long as he's alive you want Brahmastra spam.</li>
@@ -1346,8 +1351,8 @@
                         <li>Ice Boost. If you're insistent on using him as an ice piercer, this can be boost up
                             Mabufudyne's damage.</li>
                     </ul>
-                    <p><strong>Brands:</strong> Divine/Ward. You want to spam spells so this is the only option
-                        really (Spell is okay but then you wouldn't be able to 2 turn skills).</p>
+                    <p><strong>Brands:</strong> Divine. You want to spam spells so this is the only option really, Spell/Life is okay but then you won't
+                        be able to 2 turn skills in exchange for more damage/hp.</p>
                 </b-card>
                 <!-- [Zaou Gongen] -->
                 <b-card>
