Demon Guide: Zaou Gongen + Alilat updated

--- a/index.html
+++ b/index.html
@@ -1333,7 +1333,7 @@
                           <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
                               <td>Though you'd want to spam Brahmastra, <b>Ice Pierce</b> would go through 5 elements saving you from bringing Makara Break/Silent Prayer. 
                                   <br><b>Ice Age</b> could help for single targeting</td>
-                              <td><b>Best (Offensive)</b></td>
+                              <td><b>Best</b></td>
                           </tr>
                           <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
                               <td><b>Drain Ice</b> is an effective counter to other Purple Ramas and can be useful against Makarakarn/5 Elements, Reflect a Mabufudyne off the shield to heal.
@@ -1357,94 +1357,91 @@
                 <!-- [Zaou Gongen] -->
                 <b-card>
                     <p><strong><a id="ZaouGongen" href="javascript:void(0)" @click="show_guide_devil('Zaou-Gongen')">Zaou-Gongen</a></strong></p>
-                    <p>One of the key pieces in the Rebellion + Pierce combo (Pair him with Hell Biker). This is
-                        due to his unique skill Kongo Zaou which enables demons with Rebellion to also have pierce
-                        attached to this phys skills.</p>
-                        <div id="DemonGuideTable">
-                                <p><table>
-                                  <tbody>
-                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                                        <td>TO DO: <b>Enduring Soul</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                                        <td><b>Herculean Strike</b> good only when you have Hell Biker with you, gives you a sweeping
-                                            skill to use which is spammable too without needing divine brands.</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                                        <td><b>Rebellion</b> allows you to take advantage of his passive without Hell Biker, so
-                                            he himself can still be a really effective phys demon.</td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                                        <td>TO DO: <b>Fire Amp</b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                                        <td><b>Drain Phys</b> is good only when you have Rama, though I'm not sure how viable Rama would
-                                            be in a Biker Team (as I don't have a Hell Biker). I think Biker v Biker pvp matches
-                                            would likely swing in your favour.</td>
-                                        <td></td>
-                                    </tr>
-                                  </tbody>
-                                </table></p>
-                              </div>
+                    <p>One of the key pieces in the Rebellion + Pierce combo (Pair him with Hell Biker and let them go ham). This is
+                        due to his unique skill Kongo Zaou which enables demons with Rebellion (Might effect) to also have pierce attached to their phys attacks/skills.
+                    </p>
+                    <div id="DemonGuideTable">
+                      <p><table>
+                        <tbody>
+                          <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                              <td><b>Enduring Soul</b> increases his survivability but doesn't help that much in this case. The main goal with him is to stack 
+                                  up damage to hopefully one shot pve waves/one turn pvp teams.</td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                              <td><b>Herculean Strike</b> is perfect for when you have Hell Biker with you, gives you a spammable phys sweeping
+                                  skill to use. </td>
+                              <td><b>Best (With Hell Biker)</b></td>
+                          </tr>
+                          <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                              <td><b>Rebellion</b> allows you to take advantage of his passive without Hell Biker, so
+                                  he himself can still be a really effective phys demon.</td>
+                              <td><b>Best (Without Hell Biker)</b></td>
+                          </tr>
+                          <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                              <td>He has okay magic so you can technically build him with spells in mind, <b>Fire Amp</b> would boost his Maragidyne damage up. But given there aren't that many 
+                              fire weak demons (+ a fair amount of fire immune ones), this isn't that good.</td>
+                              <td>Bad</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                              <td><b>Drain Phys</b> is good if you have Rama, however his best friend is Hell Biker and a phys oriented crew to go alongside him.</td>
+                              <td>Bad</td>
+                          </tr>
+                        </tbody>
+                      </table></p>
+                    </div>
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Resist Elec to cover his weakness</li>
                         <li>Phys Aoe skill if not red.</li>
                     </ul>
-                    <p><strong>Brands:</strong> Phys type or Divine Type. Divine allows you to use God's Hand more
-                        and you would be able to use more expensive aoe skills.</p>
+                    <p><strong>Brands:</strong> War/Divine. Divine would allow you to two turn God's Hand and enables transfering more expensive phys aoe skills (If Yellow)</p>
                 </b-card>
                 <!-- [Alilat] -->
                 <b-card>
                     <p><strong><a id="Alilat" href="javascript:void(0)" @click="show_guide_devil('Alilat')">Alilat</a></strong></p>
-                    <p>Really good defensive demon to use in pvp, helping immensely vs piercing units (such as
-                        those that can be seen in AG). This is because of her unique skill Repel Pierce which makes
-                        ignores the pierce effect on units that repel the attribute. She also has really high luck
-                        + Infernal Mask meaning she can inflict ailments quite well/be really unlikely to be
-                        inflicted by ailments herself. Due to this you have a lot of freedom in picking how you
-                        want to build her, whether a debuffer, ailment caster, or even a healer too.</p>
-                        <div id="DemonGuideTable">
-                                <p><table>
-                                  <tbody>
-                                    <tr><td id="DemonGuide-Common"><b>Common</b></td>
-                                        <td><b>Diarahan</b> is a single target healing skill that could have niche use.
-                                        <br> This is her only archetype so you're stuck with this anyways. </td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
-                                        <td>TO DO:<b></b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
-                                        <td>TO DO:<b></b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
-                                        <td>TO DO:<b></b></td>
-                                        <td></td>
-                                    </tr>
-                                    <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
-                                        <td>TO DO:<b></b></td>
-                                        <td></td>
-                                    </tr>
-                                  </tbody>
-                                </table></p>
-                              </div>          
+                    <p>Really good defensive demon to use, helping immensely vs piercing units (such as those that can be seen in AG). 
+                       This is because of her unique skill Repel Pierce, ignoring the pierce effect on units that repel the attribute. 
+                       She is easy/cheap to fuse, has no weaknesses and really high luck + Infernal Mask meaning she can inflict ailments quite well and be 
+                       unlikely to be inflicted herself. Due to this you have a lot of freedom in picking how you want to build her, whether a debuffer, ailment caster, 
+                       or even a healer role from what i've seen.</p>
+                    <div id="DemonGuideTable">
+                      <p><table>
+                        <tbody>
+                          <tr><td id="DemonGuide-Common"><b>Common</b></td>
+                              <td><b>Diarahan</b> for single target healing.
+                              <br> This is her only archetype so you're stuck with this anyways. </td>
+                              <td>Usable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Aragami"><b>Aragami</b></td>
+                              <td>She's support type so in rare cases <b>Soul Drain</b> could be used. You'd want to build her towards support rather than damage anyways.</td>
+                              <td>Unobtainable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Protector"><b>Protector</b></td>
+                              <td><b>Mediarama</b> gives her usable aoe healing (a step up from Diarahan i'd say). With this archetype you can easily build her as a healer.</td>
+                              <td>Unobtainable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Psychic"><b>Psychic</b></td>
+                              <td><b>Mana Gain</b> doesn't help much and isn't that good of a skill in general</td>
+                              <td>Unobtainable</td>
+                          </tr>
+                          <tr><td id="DemonGuide-Elementalist"><b>Elementalist</b></td>
+                              <td><b>Null Phys</b> would be useful for pve content, making her immune to phys attacks means she'd less likely be targeted and be more of a thorn in 
+                              the enemy's side. Naturally she'd be able to block phys units such as: Seth, Siegfried, Zhong Kui, Nergal, Shiva, Ose from the top of my head.</td>
+                              <td>Unobtainable</td>
+                          </tr>
+                        </tbody>
+                      </table></p>
+                    </div>          
                     <p><strong>Recommended skills: </strong></p>
                     <ul>
                         <li>Samarecarm. For added support.</li>
-                        <li>Recarmdra. To surprise people in pvp and give your team a second chance.</li>
-                        <li>Aoe ailment skills except for curse and weak. Charm all, Bind all, Mute all are all
-                            valid (This is mainly for pvp)</li>
+                        <li>Recarmdra. To surprise people in pvp and give your team a second fighting chance (Run divine in order to be able to use it).</li>
+                        <li>Aoe ailment skills except for curse and weak. Charm all, Bind all, Mute all are all valid (This is for pvp)</li>
                         <li>War Cry/Fog Breath/Acid Breath, she can act as a tanky debuffer.</li>
                     </ul>
-                    <p><strong>Brands:</strong> Life/Shield. Aim for Life%, or ailment % if you're using Ailment
-                        skills. Some people go with Divine to ensure turn 1 ailment casts. PDEF % is also valid
-                        when you're fighting against Hell Biker teams.</p>
+                    <p><strong>Brands:</strong> Divine for ailments or Life for general survival. Aim for HP%, or ailment % if you're using Ailment
+                        skills. PDEF % is also valid against phys pierce when you're fighting against Hell Biker teams.</p>
                 </b-card>
                 <!-- [Lakshmi] -->
                 <b-card>
